<resources>
    <string name="app_name">LapChat</string>
    <string name="this_is_main_page">This Is Main Page!</string>
    <string name="welcome_to_lap_chat">Welcome To Lap Chat</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="dont_have_account">Dont have Account?</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
</resources>
